Format after google checks style