@@ -1,16 +1,13 @@
 package dk.dataforsyningen.arkivmeta.apimapper;
 
-import org.springframework.stereotype.Component;
-
 import java.util.Arrays;
 import java.util.List;
+import org.springframework.stereotype.Component;
 
 @Component
-public class MapperKortvaerk
-{
-    public List<String> mapKortvaerk(String kortvaerk)
-    {
-        return Arrays.asList(kortvaerk.split(";;"));
-        //return List.of(kortvaerk);
-    }
+public class MapperKortvaerk {
+  public List<String> mapKortvaerk(String kortvaerk) {
+    return Arrays.asList(kortvaerk.split(";;"));
+    //return List.of(kortvaerk);
+  }
 }
